--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "php": "^8.4",
         "laravel/framework": "^11.31",
+        "laravel/socialite": "^5.18",
         "laravel/tinker": "^2.9",
         "pusher/pusher-php-server": "^7.2"
     },
